Refactor AlertsService dependancies